# whisper-app

./: .gitignore  LICENSE  README.md  build.bat  compile_translations.py  download_test_audio.sh  generate_icons.py  install.py  pyproject.toml  run_app.py  setup.py  test_app.py  verify_structure.py
docs/dev/: conf.py
packaging/linux/: build.sh
packaging/macos/: build.sh
packaging/windows/: build.bat
src/whisper_app/: __init__.py  __main__.py  app.py
src/whisper_app/core/: __init__.py  config_manager.py  exceptions.py  file_manager.py  realtime_transcriber.py  recorder.py  transcriber.py
src/whisper_app/models/: __init__.py  file.py  transcription.py
src/whisper_app/resources/: __init__.py
src/whisper_app/resources/icons/: __init__.py
src/whisper_app/resources/translations/: en.ts  es.ts
src/whisper_app/ui/: __init__.py  dialogs.py  main_window.py  styles.py  widgets.py
src/whisper_app/utils/: __init__.py  audio_utils.py  dependencies.py  ffmpeg_utils.py  language_data.py  paths.py  text_utils.py
tests/: app.py
tests/integration/: test_transcription_flow.py
tests/unit/: test_audio_utils.py  test_config_manager.py  test_file_manager.py  test_logging.py  test_recorder.py  test_text_utils.py  test_transcriber.py  test_whisper_app.py
