[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-app"
version = "1.0.0"
description = "Aplicación de transcripción de audio/video usando OpenAI Whisper"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "Rodrigo M.", email = "rodrem@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Utilities",
]
dependencies = [
    "openai-whisper",
    "torch",
    "PyQt5",
    "sounddevice",
    "numpy",
    "soundfile",
    "scipy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "isort",
    "pyinstaller"
]

[project.scripts]
whisper-app = "whisper_app.app:main"

[project.gui-scripts]
whisper-app-gui = "whisper_app.app:main"

[project.urls]
"Homepage" = "https://github.com/trigoo007/whisper-app"
"Bug Tracker" = "https://github.com/tu-usuario/whisper-app/issues"

# PyInstaller configuración
[tool.pyinstaller]
hookspath = ["pyinstaller_hooks"]
excludes = ["FixTk", "tcl", "tk", "_tkinter", "tkinter", "Tkinter"]