[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-app"
version = "1.0.0"
description = "Aplicación de transcripción de audio/video basada en OpenAI Whisper"
authors = [
    { name = "Tu Nombre", email = "tu.email@ejemplo.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyQt5>=5.15",
    "openai-whisper>=20230314",
    "torch>=1.9.0",
    "numpy>=1.19",
    "soundfile",
    "scipy",
    "tqdm"
]

[project.urls]
Homepage = "https://github.com/tuusuario/whisper-app"
Documentation = "https://github.com/tuusuario/whisper-app#readme"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "isort",
    "pyinstaller"
]

[project.scripts]
whisper-app = "whisper_app.app:main"

[project.gui-scripts]
whisper-app-gui = "whisper_app.app:main"

[project.classifiers]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Utilities",
]

# PyInstaller configuración
[tool.pyinstaller]
hookspath = ["pyinstaller_hooks"]
excludes = ["FixTk", "tcl", "tk", "_tkinter", "tkinter", "Tkinter"]