[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-app"
version = "1.0.0"
description = "Aplicación de transcripción de audio/video basada en OpenAI Whisper"
authors = [
    { name = "Tu Nombre", email = "tu.email@ejemplo.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyQt5==5.15.10",
    "openai-whisper==20230314",
    "torch==2.1.2",
    "numpy==1.24.4",
    "soundfile==0.12.1",
    "scipy==1.11.4",
    "tqdm==4.66.1"
]

[project.urls]
Homepage = "https://github.com/tuusuario/whisper-app"
Documentation = "https://github.com/tuusuario/whisper-app#readme"

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "black==23.11.0",
    "flake8==6.1.0",
    "isort==5.12.0",
    "pyinstaller==6.3.0"
]
cuda = ["torch==2.1.2+cu118"]
cpu = ["torch==2.1.2+cpu"]
# rocm = ["torch==2.1.2+rocm5.4.2"]

[project.scripts]
whisper-app = "whisper_app.app:main"

[project.gui-scripts]
whisper-app-gui = "whisper_app.app:main"

[project.classifiers]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Utilities",
]

# PyInstaller configuración
[tool.pyinstaller]
hookspath = ["pyinstaller_hooks"]
excludes = ["FixTk", "tcl", "tk", "_tkinter", "tkinter", "Tkinter"]